first html changes

--- a/html/index.html
+++ b/html/index.html
@@ -13,6 +13,7 @@
         <header>
             <h1>Your site is up and running!</h1>
             <h3>Edit the HTML once you get this page loaded.</h3>
+            <h3>YAY it works!! :))))))</h3>
         </header>
         <div class="content">
             <ul id="results">
